Initial game logic

--- a/templates/summary.html
+++ b/templates/summary.html
@@ -1,10 +1,13 @@
-<h3>Sommario</h3>
-<ul>
+<div ng-click="next()">
+  <h3>Sommario</h3>
+  <ul>
     <li>Guadagnerai 0.05 &euro; ogni volta che gonfi in palloncino</li>
     <li>Guadagni i soldi per un palloncino quando premi "Incassa &euro;&euro;&euro;"</li>
     <li>Perdi i soldi di un palloncino quando scoppia</li>
     <li>Ci sono solo 30 palloncini</li>
     <li>Verrai pagato esattamente i soldi che hai guadagnato durante il gioco</li>
-</ul>
-<p>Hai qualche domanda?</p>
-<p>Permi il bottone sinistro del mouse per iniziare.</p>
+  </ul>
+  <p>Hai qualche domanda?</p>
+
+  <p>Permi il bottone sinistro del mouse per iniziare.</p>
+</div>
