Move app files except index.html into own folder

--- a/app/templates/test.html
+++ b/app/templates/test.html
@@ -1,5 +1,5 @@
 <div style="width: 50%; bottom: 20px; position: absolute">
-  <img src="balloon-150128.svg">
+  <img src="app/balloon-150128.svg">
   <button class="center" style="margin-top: 20px" ng-click="pump()">Gonfia il palloncino</button>
 </div>
 <div style="margin-left: 50%; width: 50%; bottom: 20px; position: absolute">
