Redirect after end game

--- a/app/templates/start.html
+++ b/app/templates/start.html
@@ -1,4 +1,4 @@
-<article ng-click="next()">
+<div ng-click="next()">
     <p>
         Fra poco vedrai 30 palloncini, uno dopo l'altro, sullo schermo.
         Cliccando sul mouse gonfierai il palloncino. Ogni click del mouse gonfia il palloncino
@@ -30,4 +30,4 @@
     <p>
         Permi il bottone sinistro del mouse per vedere il sommario.
     </p>
-</article>
+</div>
