--- a/app/templates/end.html
+++ b/app/templates/end.html
@@ -1,1 +1,3 @@
-Congratulazioni! Hai vinto {{winnings | currency:'&euro;':2}}
+<div ng-click="next()">
+    Congratulazioni! Hai vinto {{winnings | currency:'&euro;':2}}
+</div>
