--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,6 +1,6 @@
 
 html {
-    font-family: Trebuchet MS, Tahoma, Verdana, Arial, sans-serif;
+    font-family: Helvetica Neue, Helvetica, Arial;
     font-size: 1.5rem;
 }
 
