--- a/app/templates/summary.html
+++ b/app/templates/summary.html
@@ -1,7 +1,7 @@
 <div class="text">
     <h3>Riassunto</h3>
     <ul>
-        <li>Guadagnerai <b>{{winningsPerBalloon|currency:'&euro;'}}</b>
+        <li>Guadagnerai <b>{{winningsPerPump|currency:'&euro;'}}</b>
             ogni volta che gonfi un palloncino senza che questo scoppi
         </li>
         <li>Quando premi <b>Incassa &euro;&euro;&euro;</b> accumuli i soldi per quel palloncino</li>
