--- a/app/templates/start.html
+++ b/app/templates/start.html
@@ -12,7 +12,7 @@
     </p>
 
     <p>
-        Ogni volta che gonfierai un palloncino guadagnerai <b>{{ winningsPerBalloon | currency:'&euro;' }}</b> ma se il palloncino
+        Ogni volta che gonfierai un palloncino guadagnerai <b>{{ winningsPerPump | currency:'&euro;' }}</b> ma se il palloncino
         scoppia perdi i soldi che avevi guadagnato per quel palloncino.
         Per incassare i soldi di un palloncino smetti di gonfiare prima che scoppi e clicca sul bottone
         <b>Incassa &euro;&euro;&euro;</b>.
