--- a/app/templates/start.html
+++ b/app/templates/start.html
@@ -28,6 +28,6 @@
     </p>
 
     <p>
-        Permi il bottone sinistro del mouse per vedere un riassunto delle istruzioni.
+        Premi il bottone sinistro del mouse per vedere un riassunto delle istruzioni.
     </p>
 </div>
