--- a/app/templates/summary.html
+++ b/app/templates/summary.html
@@ -11,5 +11,5 @@
     </ul>
     <p>Hai qualche domanda?</p>
 
-    <p>Permi il bottone sinistro del mouse per iniziare.</p>
+    <p>Premi il bottone sinistro del mouse per iniziare.</p>
 </div>
