--- a/app/templates/game.html
+++ b/app/templates/game.html
@@ -1,6 +1,6 @@
-<audio id="blow" src="app/media/Balloon%20Blowing%20Up-SoundBible.com-1989230335.mp3"></audio>
-<audio id="pop" src="app/media/Balloon%20Popping-SoundBible.com-1247261379.mp3"></audio>
-<audio id="cash" src="app/media/Cash%20Register%20Cha%20Ching-SoundBible.com-184076484.mp3"></audio>
+<audio volume="0.7" id="blow" src="app/media/Balloon%20Blowing%20Up-SoundBible.com-1989230335.mp3"></audio>
+<audio volume="0.9" id="pop" src="app/media/Balloon%20Popping-SoundBible.com-1247261379.mp3"></audio>
+<audio volume="0.7" id="cash" src="app/media/Cash%20Register%20Cha%20Ching-SoundBible.com-184076484.mp3"></audio>
 
 <div style="width: 50%; bottom: 0; position: absolute;">
     <img id="balloon" class="center" src="app/media/balloon-150128.svg" height="{{balloonHeight}}px">
