--- a/app/css/app.css
+++ b/app/css/app.css
@@ -11,5 +11,15 @@ html {
 }
 
 .text {
-    margin: 20px;
+    margin: 30px;
+}
+
+.config {
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+}
+
+form .control-group {
+    margin-top: 10px;
 }
