--- a/app/templates/game.html
+++ b/app/templates/game.html
@@ -1,12 +1,16 @@
-<audio volume="0.7" id="blow" src="app/media/Balloon%20Blowing%20Up-SoundBible.com-1989230335.mp3"></audio>
-<audio volume="0.9" id="pop" src="app/media/Balloon%20Popping-SoundBible.com-1247261379.mp3"></audio>
-<audio volume="0.7" id="cash" src="app/media/Cash%20Register%20Cha%20Ching-SoundBible.com-184076484.mp3"></audio>
+<audio id="blow" src="{{blowSound}}"></audio>
+<audio id="pop" src="{{popSound}}"></audio>
+<audio id="cash" src="{{cashSound}}"></audio>
 
 <div style="width: 50%; bottom: 0; position: absolute;">
-    <img id="balloon" class="center" src="app/media/balloon-150128.svg" height="{{balloonHeight}}px">
+    <img id="balloon" class="center" ng-hide="balloonExploded" src="app/media/balloon-150128.svg"
+         height="{{balloonHeight}}px">
+    <img class="center" ng-show="balloonExploded" src="app/media/1374334179.svg">
 
     <p>
-        <button class="center" style="margin-top: 20px" ng-click="pump()">Gonfia il palloncino</button>
+        <button class="center" style="margin-top: 20px" ng-show="!balloonExploded" ng-click="pump()">
+            Gonfia il palloncino
+        </button>
     </p>
 </div>
 <div style="left: 60%; bottom: 0; position: absolute;">
